@@ -247,12 +247,12 @@ bool Bodies::login(const std::string name,const std::string passwd)
 
 	return true;
 }
-void Bodies::set_vcard(VCard* vcard_)
+void Bodies::set_vcard(const VCard* vcard_)
 {
 	if (vcard != vcard_) {
 		delete vcard;
 		vcard = vcard_;
-		//vcard = VCard(vcard_->tag());
+		//vcard =new  VCard(vcard_->tag());
 	}
 }
 void Bodies::logout()
